--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
         "eslint": "^4.6.1",
         "@types/node": "^8.0.26",
         "@types/mocha": "^2.2.42"
+    },
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/nachocab/vscode-highlight-dodgy-characters"
     }
 }
