--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "version": "0.4.2",
   "publisher": "nachocab",
   "engines": {
-    "vscode": "^1.15.0"
+    "vscode": "^1.32.0"
   },
-  "categories": ["Other"],
-  "activationEvents": ["*"],
-  "main": "./extension",
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "*"
+  ],
+  "main": "./out/extension.js",
   "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.5.2",
-    "vscode": "^1.1.5",
-    "mocha": "^3.5.0",
-    "eslint": "^4.6.1",
-    "@types/node": "^8.0.26",
+    "typescript": "^3.3.1",
+    "vscode": "^1.1.28",
+    "tslint": "^5.12.1",
+    "@types/node": "^10.12.21",
     "@types/mocha": "^2.2.42"
   },
   "repository": {
