Move forward-tick to default configuration

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
             "string",
             "null"
           ],
-          "default": "€£¡¿äàáâãåǎąăæçćĉčđďðèéêëěęĝģğĥìíîïıĵķĺļłľñńňöòóôõőøœŕřẞßśŝşšșťţþțüùúûűũųůŵýÿŷźžż",
+          "default": "´€£¡¿äàáâãåǎąăæçćĉčđďðèéêëěęĝģğĥìíîïıĵķĺļłľñńňöòóôõőøœŕřẞßśŝşšșťţþțüùúûűũųůŵýÿŷźžż",
           "description": "Specifies the whitelisted characters that should not be highlighted."
         }
       }
